basic/network/02Ingress/current-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld-current
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 3000
    protocol: TCP
  selector:
    app: helloworld-v1
