basic/network/02Ingress/helloworld-v2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-v2-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld-v2
  template:
    metadata:
      labels:
        app: helloworld-v2
    spec:
      containers:
      - name: k8s-demo
        image: wardviaene/k8s-demo:2
        ports:
        - name: nodejs-port
          containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld-v2
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 3000
    protocol: TCP
  selector:
    app: helloworld-v2
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloworld-ingress-v2
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: helloworld-v2.devss.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: helloworld-v2
            port:
              number: 3000
